Сделал задание module7-task1

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -763,6 +763,7 @@ body {
 .result__cards {
   display: flex;
   flex-wrap: wrap;
+  margin-right: -40px;
 }
 .result__empty {
   text-align: center;
